[gd_scene load_steps=4 format=3 uid="uid://csru7bsphowsa"]

[ext_resource type="Script" uid="uid://bhoergsnjymql" path="res://structures/structure_types/slow_area.gd" id="1_5d1ou"]
[ext_resource type="Texture2D" uid="uid://dfjvey3dv8n4l" path="res://assets/structure_assets/sugarcube.png" id="2_v78ej"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5d1ou"]

[node name="SlowArea" type="Node2D"]
script = ExtResource("1_5d1ou")
cost = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.0170087
scale = Vector2(0.832232, 0.832232)
texture = ExtResource("2_v78ej")

[node name="RangeArea" type="Area2D" parent="."]
collision_mask = 2

[node name="RangeCollider" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_5d1ou")
